Fixed issue where text was overlapping the header nav buttons.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -130,6 +130,7 @@ textarea{
 	top: 50px;
 	left: 5%;
 	width: 90%;
+	z-index: -1;
 }
 
 #skill-boxes {
